# ASPEXTest

./: .env-example  .env.compose  .env.compose-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260213_0001_initial_schema.py  20260216_0002_add_user_role_and_constraint.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: admin_tables.py  auth.py  bookings.py  tables.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  booking.py  table.py  user.py
app/repositories/: __init__.py  booking.py  table.py  user.py
app/schemas/: __init__.py  auth.py  booking.py  table.py
app/services/: __init__.py  auth.py  booking.py  bootstrap.py  cache.py  notification.py  slot.py  table.py
app/tasks/: booking.py  celery_app.py
docs/: er-diagram.md
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/dashboards/json/: aspex-api-overview.json
infra/prometheus/: prometheus.yml
tests/: conftest.py  fakes.py  test_admin_tables_api.py  test_api_endpoints.py  test_auth_service.py  test_booking_service.py  test_slot_service.py  test_table_service.py
