[tool.poetry]
name = "aspextest"
version = "0.1.0"
description = "Restaurant table booking service"
authors = ["Artasov <ivanhvalevskey@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.129.0"
uvicorn = { version = "0.40.0", extras = ["standard"] }
sqlalchemy = "2.0.46"
asyncpg = "0.31.0"
alembic = "1.18.4"
pydantic = "2.12.5"
pydantic-settings = "2.13.0"
email-validator = "2.3.0"
python-jose = { version = "3.5.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
bcrypt = "4.0.1"
python-multipart = "0.0.22"
redis = "7.2.0"
celery = "5.6.2"
python-json-logger = "4.0.0"
prometheus-fastapi-instrumentator = "7.1.0"
psycopg = { version = "3.3.2", extras = ["binary"] }

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
httpx = "0.28.1"
aiosqlite = "0.22.1"
ruff = "0.15.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ASYNC"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
